log
Fri 17 May 2024 12:57:08 AM UTC: 
 tests:  0|5
total_score: 0/70
7b027c8
Fri 17 May 2024 01:32:02 AM UTC: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4739584
Fri 17 May 2024 01:39:57 AM UTC: 
 sudoku.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
7a9dc72
Fri 17 May 2024 01:42:55 AM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
9b24305
Fri 17 May 2024 01:47:23 AM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|0
6bfdfd0
Fri 17 May 2024 01:48:30 AM UTC: 
 sudoku.c | 20 +-------------------
 1 file changed, 1 insertion(+), 19 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e8321e6
Fri 17 May 2024 01:48:49 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
74e89ea
Fri 17 May 2024 01:49:00 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
7ea6a86
Fri 17 May 2024 01:51:02 AM UTC: 
 sudoku.c | 19 +------------------
 1 file changed, 1 insertion(+), 18 deletions(-)
 tests:  3|3
total_score: 25/70
c00d500
Fri 17 May 2024 02:09:46 AM UTC: 
 sudoku.c | 52 +++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 51 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:8: error: unused variable ‘subgrid’ [-Werror=unused-variable]
   53 |    int subgrid[10];
      |        ^~~~~~~
sudoku.c:52:8: error: unused variable ‘columna’ [-Werror=unused-variable]
   52 |    int columna[10];
      |        ^~~~~~~
sudoku.c:51:8: error: unused variable ‘fila’ [-Werror=unused-variable]
   51 |    int fila[10];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
ab06382
Fri 17 May 2024 02:09:59 AM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  7|1
total_score: 55/70
ebf5424
Fri 17 May 2024 02:22:13 AM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|0
f6c1783
Fri 17 May 2024 02:24:15 AM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:162:10: error: implicit declaration of function ‘remove_first’ [-Werror=implicit-function-declaration]
  162 |          remove_first(list);
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d5c6d22
Fri 17 May 2024 02:26:38 AM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:161:10: error: implicit declaration of function ‘removeFirst’ [-Werror=implicit-function-declaration]
  161 |          removeFirst(list);  // Asume que esta función elimina el primer elemento de la lista
      |          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5809964
Fri 17 May 2024 02:33:16 AM UTC: 
 sudoku.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  10|0
total_score: 70/70
0a946a0
Fri 17 May 2024 02:44:04 AM UTC: 
 sudoku.c | 36 +++++++++++++++++++-----------------
 1 file changed, 19 insertions(+), 17 deletions(-)
 tests:  7|1
total_score: 55/70
125bbbe
Fri 17 May 2024 02:44:15 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
45537a5
